Cleanup of some incorrect code comments. Nimbus now directly parses hosts instead of requiring it to be compiled to nimbus-hosts. nimbus-hosts and compile_hosts.py are now obsolete; removed them. Licensing terms are now more clear. The core of Nimbus is MIT-licensed, and the extensions are Unlicensed, unless otherwise specified. This change does not affect older releases of Nimbus, which remain largely Unlicensed.

--- a/lib/start.html
+++ b/lib/start.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- LICENSE: See <http://unlicense.org/> for more details. -->
 <html>
     <head>
         <title>Start Page</title>
